	12122,Dasik - FOOD should add temporary +30 Hit
	12123,Oil_and_Honey_Pastry - FOOD should add temporary +30 Flee
	12124,Various_colored_Rice_Cake - FOOD should add temporary +10 ATK +10 MATK
	7458,Fortune_Horn - it's a custom name yet
	12016,Speed_Increasing_Potion no bonus... Turbo Track race item
	12017,Speed_Decreasing_Potion no bonus... Turbo Track race item

	--
11/27
	* Updated skill_db to make all ranged skills with range 8 become 9. Also
	  explained wtf is "maxcount" in skill_db. [Skotlex]
	* Fixed SA skills showing up. wtf is "maxcount" in skill_db??? [Vicious]
11/26
	* Updated effect boxes, according to RO Magazine [Vicious]
	* Updated Redemptio(no target, not dex-effected) [Vicious]
	* Updated blowcount on 2nd class quest skills [Vicious]
	* Updated sell prices on new items [Vicious]
	* Updated Great Axe to give +5 skillblown to Mammonite, and BonGun card +5
	  knockback to Bash [Skotlex]
	* Changed the range of Blitz Beat and Falcon Assault to 5 [Skotlex]
	  (Vulture Eye bonus is now applied to these skills)
11/25
	* Updated skill ranges of Rogue and Priest skills, thanks to Komurka
	  for the information. [Skotlex]
	* Updated skill ranges of Assassin and Crusader skills, thanks to Komurka
	  for the information. [Skotlex]
11/24
	* Updated skill ranges of Hunter and Knight skills, thanks to Komurka for
	  the packet information. [Skotlex]
11/22
	* Lowered the required ammount of oridecon needed to craft gladiuses by 4, [MasterOfMuppets]
	  thanks to andz for pointing it out.
	* Updated the Range of Provoke, Bowling Bash. Retouched the range of Spear
	  Stab to be +2 of current weapon rather than 4. [Skotlex]
	* Reupdated the mob skill db (some mobs had mode change-target which is
	  obsolete now) [Skotlex]
	* Merged in Komurka's latest update to the mob_skill_db.txt [Skotlex]
	* Updated Firewall's knockback to 2. [Skotlex]
	* Updated the job bonuses for a bunch of jobs, thanks to Haplo for going
	  through the kRO job bonus db. [Skotlex]